--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "fs": "^0.0.1-security",
     "log4js": "^4.1.0",
+    "mongoose": "^5.5.14",
     "mysql": "^2.16.0",
     "redis": "^2.8.0"
   },
