--- a/config/app.json
+++ b/config/app.json
@@ -14,6 +14,6 @@
     "port": 6379
   },
   "mongoose": {
-    "url": "mongodb://localhost:27017/shareapp"
+    "url": "mongodb://localhost:27017/Shareapp"
   }
 }
